init intro section + button

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Lato', sans-serif;
+  background-color: #383f49;
+  color: #ffffff;
+}
+
 .App {
   text-align: center;
 }
@@ -26,13 +32,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
