--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.flat-shadow-in {
+	box-shadow: inset -2px -3px 0 rgba(0,0,0,.4);
+}
