--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
 	box-shadow: inset -2px -3px 0 rgba(0,0,0,.4);
 }
 
+.flat-shadow-in-out {
+  box-shadow: inset -2px -3px 0 rgba(0,0,0,.4), 2px 3px 0 rgba(0,0,0,.4)
+}
+
 .vertical-space-8 {
   padding-top: 4px;
   padding-bottom: 4px;
