--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -1,6 +1,7 @@
 .skills-section-container {
   min-height: 300px;
   background-color: rgb(18, 18, 31);
+  margin-top: -120px;
 }
 
 .skill-logo-sm {
@@ -10,4 +11,8 @@
   max-width: 150px;
   padding: 10px;
   display: inline-block;
+}
+
+.wave-bar {
+  width: 100%;
 }
