improve svg logos

--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -8,8 +8,8 @@
   height: auto;
   width: auto;
   max-height: 80px;
-  max-width: 150px;
-  padding: 15px;
+  max-width: 120px;
+  margin: 15px;
   display: inline-block;
 }
 
