--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -4,12 +4,16 @@
   margin-top: -120px;
 }
 
+.skills-section-grid {
+  margin: 0px 7vw;
+}
+
 .skill-logo-sm {
   height: auto;
   width: auto;
   max-height: 80px;
   max-width: 120px;
-  margin: 15px;
+  padding: 15px;
   display: inline-block;
 }
 
