--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -1,7 +1,6 @@
 .skills-section-container {
   min-height: 300px;
   background-color: rgb(18, 22, 39);
-  margin-top: -120px;
 }
 
 .skills-section-grid {
@@ -12,13 +11,11 @@
   height: auto;
   width: auto;
   max-height: 80px;
-  max-width: 120px;
-  padding: 15px;
-  display: inline-block;
+  max-width: 100px;
+  padding: 10px;
 }
 
 .wave-bar {
   width: 100%;
-  height: auto;
-  min-height: 250px;
+  margin-bottom: -8vw;
 }
