--- a/src/components/commons/Button.css
+++ b/src/components/commons/Button.css
@@ -9,7 +9,8 @@
   padding: 10px 30px;
   user-select: none;
   transition-timing-function: ease-in;
-  transition: 0.2s;
+  transition: 0.1s;
+  margin: 5px;
 }
 
 .button:active {
@@ -17,5 +18,5 @@
   transform: translate(1px, 1px);
   box-shadow: inset 2px 3px 0 rgba(0,0,0,.4);
   transition-timing-function: ease-out;
-  transition: 0.2s;
+  transition: 0.1s;
 }
