--- a/src/components/commons/ProjectCard.css
+++ b/src/components/commons/ProjectCard.css
@@ -2,7 +2,7 @@
   margin: 10px;
   height: 250px;
   width: 250px;
-  border: solid 4px #000;
+  border-radius: 60px;
   position: relative;
   background-color: black;
   display: inline-block;
@@ -15,6 +15,8 @@
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.3; 
+  border-radius: inherit;
+  box-shadow: inherit;
 }
 
 .project-card-wrapper {
