--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 .footer-container {
-  background-color: rgb(146, 146, 148);
+  background-color: rgb(122, 197, 250);
+  padding-bottom: 20px;
 }
 
 .wave-footer-wrapper {
@@ -27,7 +28,7 @@
   width: 35px;
   height: auto;
   padding: 10px;
-  filter: opacity(0.5);
+  filter: opacity(0.7);
   transition: all .2s ease-in-out;
 }
 
