--- a/src/components/ProjectsSection.css
+++ b/src/components/ProjectsSection.css
@@ -1,4 +1,6 @@
 .projects-section-container {
-  min-height: 500px;
+  min-height: 450px;
   padding: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
