--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -1,6 +1,6 @@
 .skills-section-container {
   min-height: 300px;
-  background-color: rgb(18, 22, 39);
+  background-color: #181818;
   margin: -5px 0px;
   padding: 50px 0px;
 }
