--- a/src/components/softwareSkills/SoftwareSkill.scss
+++ b/src/components/softwareSkills/SoftwareSkill.scss
@@ -29,6 +29,11 @@
 .software-skill-inline > i:hover ~ p {
   color: $skillsColor;
 }
+
+.skills-filter-container {
+  margin-bottom: 1rem;
+}
+
 .icon-go:before {
   margin-right: -10px;
 }
