add react typist + improve css

--- a/src/components/skillsFilter/SkillsFilter.scss
+++ b/src/components/skillsFilter/SkillsFilter.scss
@@ -1,8 +1,8 @@
 @import "../../_globalColor";
 
 .skills-filter-wrapper {
-  margin: 1rem;
-  padding: 2px 0px;
+  margin: 0.2rem 0.5rem;
+  padding: 4px;
 }
 
 .skills-filter {
