--- a/src/components/ToggleSwitch/ToggleSwitch.scss
+++ b/src/components/ToggleSwitch/ToggleSwitch.scss
@@ -36,6 +36,19 @@ input {
   transition: 0.4s;
 }
 
+.moon-icon {
+  font-size: 15px;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
+.sun-icon {
+  font-size: 15px;
+  padding-top: 5px;
+  padding-right: 5px;
+  float: right;
+}
+
 input:checked + .slider {
   background-color: $toggleCheck;
 }
