add cname + fix greeting box

--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -101,7 +101,7 @@
   .greeting-text {
     font-size: 30px;
     text-align: center;
-    min-width: none;
+    min-width: 0;
   }
   .greeting-text-p {
     font-size: 16px;
@@ -121,7 +121,7 @@
   .greeting-text {
     font-size: 30px;
     text-align: center;
-    min-width: none;
+    min-width: 0;
   }
   .main {
     width: auto;
